--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
     tools:context="wind.kotlin.MainActivity">
 
     <TextView
+        android:id="@+id/text"
         android:text="Hello World!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
